@@ -85,6 +85,7 @@ class AllInOneRepository(Repository):
             self.inventory_store = get_store('inventory-store')
             self._text_store = get_store('text-store')
         super(AllInOneRepository, self).__init__(_format, a_bzrdir, a_bzrdir._control_files)
+        self._fetch_order = 'topological'
 
     @needs_read_lock
     def _all_possible_ids(self):
@@ -177,6 +178,10 @@ class WeaveMetaDirRepository(MetaDirVersionedFileRepository):
     """A subclass of MetaDirRepository to set weave specific policy."""
 
     _serializer = xml5.serializer_v5
+
+    def __init__(self, _format, a_bzrdir, control_files):
+        super(WeaveMetaDirRepository, self).__init__(_format, a_bzrdir, control_files)
+        self._fetch_order = 'topological'
 
     @needs_read_lock
     def _all_possible_ids(self):
@@ -317,6 +322,7 @@ class RepositoryFormat4(PreSplitOutRepositoryFormat):
 
     def __init__(self):
         super(RepositoryFormat4, self).__init__()
+        self._fetch_order = 'topological'
 
     def get_format_description(self):
         """See RepositoryFormat.get_format_description()."""
@@ -368,6 +374,7 @@ class RepositoryFormat5(PreSplitOutRepositoryFormat):
 
     def __init__(self):
         super(RepositoryFormat5, self).__init__()
+        self._fetch_order = 'topological'
 
     def get_format_description(self):
         """See RepositoryFormat.get_format_description()."""
@@ -410,6 +417,7 @@ class RepositoryFormat6(PreSplitOutRepositoryFormat):
 
     def __init__(self):
         super(RepositoryFormat6, self).__init__()
+        self._fetch_order = 'topological'
 
     def get_format_description(self):
         """See RepositoryFormat.get_format_description()."""
